--- a/package.json
+++ b/package.json
@@ -12,12 +12,18 @@
     "all": "pnpm dlx shadcn@canary add --all"
   },
   "dependencies": {
+    "@radix-ui/react-popover": "^1.1.13",
+    "@radix-ui/react-slot": "^1.2.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "fumadocs-core": "15.3.2",
     "fumadocs-mdx": "11.6.3",
     "fumadocs-ui": "15.3.2",
+    "lucide-react": "^0.510.0",
     "next": "15.3.1",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "react-dom": "^19.1.0",
+    "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^4.13.1",
@@ -35,6 +41,7 @@
     "postcss": "^8.5.3",
     "simple-git-hooks": "^2.13.0",
     "tailwindcss": "^4.1.5",
+    "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3"
   },
   "simple-git-hooks": {
