feat(ui): 自定义全局 Header :sparkles:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,18 @@
       ],
       "@/*": [
         "./src/*"
+      ],
+      "@library/*": [
+        "./src/components/library/*"
+      ],
+      "@fumadocs": [
+        "./src/fumadocs/*"
+      ],
+      "@shadcn/*": [
+        "./src/components/ui/*"
+      ],
+      "~/*": [
+        "./*"
       ]
     },
     "resolveJsonModule": true,
