--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "lint-staged": "^16.0.0",
+    "motion": "^12.12.1",
+    "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "simple-git-hooks": "^2.13.0",
     "tailwindcss": "^4.1.5",
