feat(ui): 首页Hero :sparkles:

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -21,7 +21,7 @@
       "@library/*": [
         "./src/components/library/*"
       ],
-      "@fumadocs": [
+      "@fumadocs/*": [
         "./src/fumadocs/*"
       ],
       "@shadcn/*": [
