--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "eslint": "^9.26.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
+    "framer-motion": "^12.12.1",
     "lint-staged": "^16.0.0",
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
