--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@antfu/eslint-config": "^4.13.1",
     "@eslint-react/eslint-plugin": "^1.49.0",
     "@next/eslint-plugin-next": "^15.3.2",
+    "@shikijs/transformers": "^3.4.2",
     "@tailwindcss/postcss": "^4.1.5",
     "@types/mdx": "^2.0.13",
     "@types/node": "22.15.12",
@@ -38,14 +39,20 @@
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
     "framer-motion": "^12.12.1",
+    "fumadocs-docgen": "^2.0.0",
+    "fumadocs-twoslash": "^3.1.1",
     "lint-staged": "^16.0.0",
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
+    "rehype-katex": "^7.0.1",
+    "remark-math": "^6.0.0",
+    "shiki": "^3.4.2",
     "simple-git-hooks": "^2.13.0",
     "tailwindcss": "^4.1.5",
     "tw-animate-css": "^1.2.9",
-    "typescript": "^5.8.3"
+    "typescript": "^5.8.3",
+    "zod": "^3.24.4"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged"
