--- a/package.json
+++ b/package.json
@@ -45,8 +45,10 @@
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
+    "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
+    "satori": "^0.13.1",
     "shiki": "^3.4.2",
     "simple-git-hooks": "^2.13.0",
     "tailwindcss": "^4.1.5",
