--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -73,7 +73,7 @@ jobs:
         run: pnpm install
 
       - name: Build with Next.js
-        run: pnpm web:build
+        run: pnpm build
         env:
           NEXT_PUBLIC_SITE_URL: liaoyi.im
 
