--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "motion": "^12.12.1",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
+    "react-social-media-embed": "^2.5.18",
     "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.1",
     "remark-math": "^6.0.0",
