--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "clsx": "^2.1.1",
     "fumadocs-core": "15.3.2",
     "fumadocs-mdx": "11.6.3",
+    "fumadocs-typescript": "^4.0.3",
     "fumadocs-ui": "15.3.2",
     "lucide-react": "^0.510.0",
     "next": "15.3.1",
@@ -53,6 +54,7 @@
     "shiki": "^3.4.2",
     "simple-git-hooks": "^2.13.0",
     "tailwindcss": "^4.1.5",
+    "ts-morph": "^25.0.1",
     "tw-animate-css": "^1.2.9",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
