--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "tailwindcss": "^4.1.5",
     "ts-morph": "^25.0.1",
     "tw-animate-css": "^1.2.9",
+    "twoslash": "^0.3.1",
     "typescript": "^5.8.3",
     "zod": "^3.24.4"
   },
