--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint",
     "lint:fix": "eslint --fix",
     "postinstall": "fumadocs-mdx",
-    "all": "pnpm dlx shadcn@canary add --all"
+    "all": "pnpm dlx shadcn@canary add --all",
+    "sitemap": "next-sitemap --config ./src/next-sitemap.config.cjs",
+    "postbuild": "pnpm sitemap"
   },
   "dependencies": {
     "@radix-ui/react-popover": "^1.1.13",
@@ -44,6 +46,7 @@
     "fumadocs-twoslash": "^3.1.1",
     "lint-staged": "^16.0.0",
     "motion": "^12.12.1",
+    "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
     "react-social-media-embed": "^2.5.18",
