--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "@next/eslint-plugin-next": "^15.3.2",
     "@shikijs/transformers": "^3.4.2",
     "@tailwindcss/postcss": "^4.1.5",
+    "@tanstack/react-query": "^5.79.0",
+    "@tanstack/react-query-devtools": "^5.79.0",
     "@types/mdx": "^2.0.13",
     "@types/node": "22.15.12",
     "@types/react": "^19.1.3",
