--- a/package.json
+++ b/package.json
@@ -14,10 +14,16 @@
     "postbuild": "pnpm sitemap"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.0.1",
+    "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-popover": "^1.1.13",
     "@radix-ui/react-slot": "^1.2.2",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-toggle-group": "^1.1.10",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
+    "antd": "^5.25.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "fumadocs-core": "15.3.2",
@@ -28,6 +34,7 @@
     "next": "15.3.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
     "tailwind-merge": "^3.3.0"
   },
   "devDependencies": {
@@ -42,6 +49,7 @@
     "@types/node": "22.15.12",
     "@types/react": "^19.1.3",
     "@types/react-dom": "^19.1.3",
+    "@types/ws": "^8.18.1",
     "eslint": "^9.26.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.20",
@@ -53,6 +61,7 @@
     "next-sitemap": "^4.2.3",
     "next-themes": "^0.4.6",
     "postcss": "^8.5.3",
+    "react-intersection-observer": "^9.16.0",
     "react-social-media-embed": "^2.5.18",
     "reading-time": "^1.5.0",
     "rehype-katex": "^7.0.1",
@@ -60,11 +69,14 @@
     "satori": "^0.13.1",
     "shiki": "^3.4.2",
     "simple-git-hooks": "^2.13.0",
+    "sonner": "^2.0.5",
     "tailwindcss": "^4.1.5",
     "ts-morph": "^25.0.1",
     "tw-animate-css": "^1.2.9",
     "twoslash": "^0.3.1",
     "typescript": "^5.8.3",
+    "uuid": "^11.1.0",
+    "ws": "^8.18.2",
     "zod": "^3.24.4"
   },
   "simple-git-hooks": {
